css/main.css
/*
font-family: freight-sans-pro, sans-serif;
font-weight: 400;
font-style: normal;

FreightSans Pro Book Italic

font-family: freight-sans-pro, sans-serif;
font-weight: 400;
font-style: italic;

FreightSans Pro Bold

font-family: freight-sans-pro, sans-serif;
font-weight: 700;
font-style: normal;

FreightSans Pro Bold Italic

font-family: freight-sans-pro, sans-serif;
font-weight: 700;
font-style: italic;

FreightSansHPro XLight

font-family: freight-sans-pro-lights, sans-serif;
font-weight: 300;
font-style: normal;

FreightSansHPro XLight Ita

font-family: freight-sans-pro-lights, sans-serif;
font-weight: 300;
font-style: italic;

FreightSansCmpPro Bold

font-family: freight-sans-compressed-pro, sans-serif;
font-weight: 700;
font-style: normal;*/

/*
Forma DJR Micro Bold Italic

font-family: forma-djr-micro, sans-serif;
font-weight: 700;
font-style: italic;

Forma DJR Micro Bold

font-family: forma-djr-micro, sans-serif;
font-weight: 700;
font-style: normal;*/

:root {
  --black: #181818;
  --dark-gray: #6b6b6b;
  --light-gray: #c5c5c5;
  --off-white: #f5f5f5;
  --blue: #16a6b6;
  --orange: #ee6557;
}

html{
  margin: 20px;
}

body{
  font-family: freight-sans-pro-lights;
  color: var(--dark-gray);
  line-height: 1.4em;
  background-color: var(--off-white);
  /*text-align: center;*/
}

/*-----------------Side Bar---------------------*/

.side-nav {
  height: 100%;
  width: 200px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: var(--light-gray);
  padding-top: 20px;
  padding: 10px;
}

.side-nav a{
  border-bottom: none;
}

 .all{
    margin-left: 210px;
}

.nav-logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
}

.nav{
  margin-top: 25px;
}

nav ul{
  padding-left: 20px;
}

/*------------------------------------misc----------------------*/

.component__code {
  border: 1px solid gray;
  display: inline-block;
  overflow: scroll;
}

.work-featured-uxlink{
  text-decoration: none;
  color: var(--orange);
}

.display_inline_block{
  display: inline-block;
}

.display-block{
  display: block;
}

.workhex {
  height: 180px;
}
/*<-------------------------General Text--------------------*/

.clear{
  clear:left
}

cite {
  font-weight: 400;
  display: block;
  margin-top: 1em;
  font-style: normal;
  text-align: center;
}

.h5 {
  font-size: 12px;
  word-spacing: 1px;
  line-height: 14px;
  text-transform: uppercase;
  letter-spacing: 3px;
  margin-top: 1em;
}

p{
  margin-top: 1em;
  text-align: center;
}

blockquote {
  font-size: 28px;
  line-height: 36px;
  word-spacing: 1px;
  text-align: center;
  max-width: 960px;
  quotes: none;
}

.slide-holder div {
  display: inline-block;
}

.data-list__paragraph{
  text-transform: uppercase;
  letter-spacing: 3px;
  font-size: 12px;
  line-height: 1.2em;
}

.work-featured-paragraph{
  max-width: 291px;
}

.work-featured-paragraph p{
  text-align: left;
}

.work-featured-paragraph a{
  border-bottom: none;
}

.footer-about__card--text{
  color: #888888;
  margin: 10px;
  line-height: 1.5em;
}

/*------------------------Header Nav---------------------*/

.header-bar {
  text-align: center;
}

.header-bar p{
  display: inline-block;
  vertical-align: middle;
  width: 108px;
  text-transform: uppercase;
  margin: 0 10px;
  letter-spacing: 3px;
}

.header-bar a{
  padding-bottom: 5px;
  display: block;
  border-color: var(--black);
}

.header-bar a:hover{
  color: var(--blue);
  border-color: var(--blue);
}

.text-left {
  text-align: left;
}

.text-right{
  text-align: right;
}

.logo a {
  border-bottom: none;
}

/*<------------------------------Headings-------------------->*/

h1,h2,h3,h4{
  text-align: center;
}

h2,h3, h4,text {
  text-transform: uppercase;
}
h1 {
  font-family: forma-djr-micro, sans-serif;
  font-weight: 700;
  color: var(--black);
  letter-spacing:-.6px;
  word-spacing: 4px;
}

h2 {
  margin: auto;
}

text {
  font-size: 34px;
  font-family: forma-djr-micro, sans-serif;
  color: var(--black);
  font-weight: 700;
  margin: 0;
  height: 120px;
  line-height: 120px;
}

.work-featured__h1 {
  font-size: 36px;
  line-height: 42px;
}

@media screen and (max-width: 1050px) {.work-featured__h1 {
  font-size: 60px;
  line-height:70px;
}
}

h2{
  font-size: 24px;
  word-spacing:1px;
  line-height: 30px;
  letter-spacing: 3px;
  font-weight: 300;
  color: var(--black);
  margin-top: 1em;
}

.main__h2{
  text-transform: none;
  letter-spacing: 0;
  margin-top: 1.5em;
  line-height: 32px;
  color: var(--dark-gray);
  max-width: 700px;
  text-align: center;
}

h3 {
  font-size: 20px;
  word-spacing:1px;
  line-height:22px;
  padding-top: 1em;
  font-weight: 300;
  color: var(--black);
}

h4{
  font-size: 14px;
  font-weight: 400;
  letter-spacing:.15em;
}

.main__h1{
font-size: 84px;
line-height:90px;
text-align:center;

}

.footer-about__card--title {
  font-size: 20px;
  letter-spacing: 3px;
  font-weight: 300;
  margin-top: 5px;
  line-height: 22px
}

/*<------------------------Page Breaks------------------------*/

hr {
  height: 1px;
  background-color: var(--off-white);
  color: var(--dark-gray);
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.stats-section{
  padding-top: 125px;
}

.blockquote-section {
  padding-top: 75px;
}

.page-break1 {
  width: 120px;
}

.page-break2 {
 width: 820px;
 color:  var(--black);
}


/*------------------------Lists---------------------*/

ul{
    display: block;
    list-style: none;
    vertical-align: baseline;
    margin: 0;
    padding: 0;
    border: 0;
}

.nav-bar li{
    display: block;
}

li {
  list-style: none;
  display: inline-block;
}

.data-list li {
  margin-right: 14px;
  margin-left: 14px;
}

.data-list {
  text-align: center;
  padding: 22px;
}

.blockquote-section {
  text-align: center;
  position: relative;
}

/*--------------------------Hexagons------------------------*/

.workfeatured-hexagon-list {
  display: grid;
  grid-template-columns: repeat(5, 190px);
  grid-template-rows: 190px;
  grid-gap: 0;
}


.workfeatured-hexagon-list div{
  width: 190px;
  height: 190px;
  display: inline-block;
  clip-path: polygon(6% 25%, 6% 75%, 50% 94%, 92% 75%, 92% 25%, 50% 6%);
  margin-bottom: -54px;
}


/*
.hex-flex-box {
  display: flex;
  max-width: 1000px;
  margin: auto;
  padding-top: 70px;
  text-align: center;
}

.workfeatured-hexagon-list::before {
  content: "";
  width: 52px;
  float: left;
  height: 100%;
  shape-outside: repeating-linear-gradient(#0000 0 280px, #000 0 285px);
}

.workfeatured-hexagon-list{
  font-size: 0;
}
*/

/*
.hexagon {
  float: left;
}

.workfeatured-hexagon-list a{
  border-bottom: none;
  max-width: 995px;
}*/

/*
@media screen and (max-width: 992px) {
  .hex-flex-box{
    max-width: 775px;
  }
}
*/

/*

<<<<<<-----------------Need to fix the media query for hexagons to change to teo columns of square images ----------------->>>>


@media screen and (max-width: 804px) {
  .workfeatured-hexagon-list::before {
  shape-outside: none;
}
}

@media screen and (max-width: 995px) {
  .hex-flex-box {
  display: grid;
  grid-template-columns:
  minmax(244px, 1fr) minmax(244px, 1fr);
  grid-template-rows:
  minmax(266px,1fr)
  minmax(266px,1fr)
  minmax(266px,1fr)
  minmax(266px,1fr)
  minmax(266px,1fr)
  minmax(266px,1fr)
  minmax(266px,1fr);


}
}

@media screen and (max-width: 995px) {
  .workfeatured-hexagon-list div {
  float: none;
  clip-path: none;
  max-width: 356px;
}
}*/

} /*Don't know what this guy corrilates to but things get messed up when I take it out?*/


/*<----------------------------Images------------------*/

img {
  display: block;
  max-width: 100%;
}

article .component__img {
  border: 1px solid gray;
  display: block;
}

 .component__img {
 display: block;
 overflow: scroll;
}
/*<---------------------------Links------------------>*/

a {
  border-bottom-style: solid;
  border-bottom-width: thin;
  border-color:inherit;
  text-decoration: none;
  border-color: var(--blue);
  color: var(--black);
  cursor: pointer;

}

a:hover{
  color: var(--blue);
}


/*<-------------------------Button/Forms--------------->*/

form {
  position: relative;
  display: block;
}

.input-container {
  position: relative;
  margin-top: 1em;
}

input {
  box-sizing: border-box;
  box-shadow: none;
  border-radius: 5px;
  display: block;
  width: 100%;
  padding: 10px;
  outline: none;
  background-color: #fff;
  border: none;
  color: var(--dark-gray);
}

.input-container button{
  position: absolute;
  top: 0;
  right:0;
  height: 100%;
  padding: 0 6px 0 7px;
  background: 0 0;
  color: var(--dark-gray);
  border-width: 0;
}

.input-container button:hover{
  color: var(--blue);
  cursor: pointer;
}

.button {
  border-radius: 5px;
  background-color: #BEBEBE;
  color: white;
  padding: 10px 20px;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 3px;
  word-spacing: 1px;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

.button:hover {
  background-color: #33cccc;
  color: white;
  cursor: pointer;
}

.footer-about__card--button {
  text-decoration: none;
  border-bottom-style: none;
}

.footer-about__card--button:hover{
  color: var(--dark-grey);
}

/*-----------------------------------Icons/Logos---------------------*/
.logo-box{
  height: 180px;
}

.icon {
  font-size: 100px;
  color: var(--orange);
  text-decoration: none;
  border-bottom-style: none;
}

* > .hover-show,
*:hover > .hover-hidden {
  display: none;
}
*:hover > .hover-show {
  display: inline-block;
}

.fa-shopify {
  font-size: 32px;
}

.fa-mailchimp{
  font-size: 35px;
}

.logo {
  height: auto;
  border-bottom: none;
  padding: none;
}

.logo a{
  padding: 0;
}

/*---------------------------------Footer-------------------*/

.footer-about {
  padding-top: 75px;
  margin: auto;
  max-width: 820px;
}

.footer-about__card{
  display:inline-block;
  padding: 40px 20px 40px 20px;
  border-top-style: solid;
  border-top-width: thin;
  border-color: var(--dark-gray);
}

.footer-about li {
  background: #F5F5F5;
  text-align: center;
  vertical-align: middle;
  height: 392px;
  width: 226px;
}

.footer-subsection{
  text-align: center;
}

/*.footer-subsection p{
  max-width:
}*/

.footer-logos a {
  border-bottom-style: none;
  color: var(--dark-gray);
  font-size: 30px;
  cursor: pointer;
  padding: 20px;
}

.footer-logos a:hover {
  color: var(--black);
}

/*-----------Block Quote Section---------------*/

.slider-holder {
  width: 960px;
  height: 350px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  overflow:hidden;
}

.slide-holder {
  width: 960px;
  height: 350px;
  position: relative;
}

.slide {
  width: 960px;
  height: 360px;
  float: left;
  margin: 0px;
  padding: 0px;
  position: relative;
}

#slide-1:target ~ .slide-holder{
  left: 0px;
}

#slide-2:target ~ .slide-holder{
  left: -960px;
}

#slide-3:target ~ .slide-holder{
  left: -1600px;
}
#slide-4:target ~ .slide-holder{
  left: -2880px;
}
#slide-5:target ~ .slide-holder{
  left: -3840px;
}

.button-holder{
  top: 415px;
  left: 0;
  right: 0;
  bottom: 0;
  position: absolute;
  margin-left: auto;
  position: none;
  /*text-align: center;*/
}

.slider-change {
  display: inline-block;
  height:10px;
  width: 50px;
  border-radius: 5px;
  color: var(--orange);
}

.button-holder a{
  border-bottom: none;
}

.button-holder i{
  font-size: 35px;
}

.slider-change .fas {
  color: var(--light-gray);
}

